--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>CodesWear</title>
 </head>
 <body>
-    
+    <div class="bapcontainer">
+
     <!-- navbar -->
     <div class="navbar">
         <div class="openMenu"><h1><i class="fa-brands fa-windows"></i></h1></div>
@@ -129,7 +130,7 @@
             <i class="fa-brands fa-linkedin"></i>
         </div>
     </div>
-    
+</div>
 
     <script src="./js/app.js"></script>
 </body>
